# Robot-Sensing-and-Navigation-Projects

LAB1 GPS DRIVER/: README.md
LAB1 GPS DRIVER/src/: analysis.py
LAB1 GPS DRIVER/src/gps_driver/: package.xml  setup.py
LAB1 GPS DRIVER/src/gps_driver/gps_driver/: driver.py
LAB1 GPS DRIVER/src/gps_driver/launch/: gps_launch.py
LAB1 GPS DRIVER/src/msg_package/: CMakeLists.txt  package.xml
LAB1 GPS DRIVER/src/msg_package/msg/: GPSmsg.msg
LAB1 GPS DRIVER/src/stationary_data.bag/: metadata.yaml  stationary_data.bag_0.db3
LAB1 GPS DRIVER/src/walking_data.bag/: metadata.yaml  walking_data.bag_0.db3
LAB3 IMU/analysis/: analysis_15min.py  imu5hrs.m
LAB3 IMU/data/stationary_imu_data.bag/: metadata.yaml
LAB4 GPS & IMU Sensor Fusion/: README.md
LAB4 GPS & IMU Sensor Fusion/analysis/: analysis.py
LAB4 GPS & IMU Sensor Fusion/data/data_going_in_circles/: data_going_in_circles_0.db3  metadata.yaml
LAB4 GPS & IMU Sensor Fusion/data/data_going_in_circles/data_driving/: metadata.yaml
LAB4 GPS & IMU Sensor Fusion/src/gps_driver/: package.xml  setup.py
LAB4 GPS & IMU Sensor Fusion/src/gps_driver/gps_driver/: driver.py
LAB4 GPS & IMU Sensor Fusion/src/gps_driver/launch/: gps_launch.py
LAB4 GPS & IMU Sensor Fusion/src/gps_msg/: CMakeLists.txt  package.xml
LAB4 GPS & IMU Sensor Fusion/src/gps_msg/msg/: GPSmsg.msg
LAB4 GPS & IMU Sensor Fusion/src/imu_driver/: package.xml  setup.py
LAB4 GPS & IMU Sensor Fusion/src/imu_driver/imu_driver/: driver.py  subscriber_plot.py
LAB4 GPS & IMU Sensor Fusion/src/imu_driver/launch/: imu_launch.py
LAB4 GPS & IMU Sensor Fusion/src/imu_msg/: CMakeLists.txt  package.xml
LAB4 GPS & IMU Sensor Fusion/src/imu_msg/msg/: IMUmsg.msg
LAB4 GPS & IMU Sensor Fusion/src/rsn_driver/: package.xml  setup.cfg  setup.py
LAB4 GPS & IMU Sensor Fusion/src/rsn_driver/launch/: rsn_drivers_launch.py
LAB5 Automatic_Panoramic_Image_Mosaicing/data/images50/: brief.py  brief22.py  dektehai.py
PA0/: PA0_REPORT
PA1/src/: README.md
PA1/src/py_pubsub/: package.xml  setup.py
PA1/src/py_pubsub/py_pubsub/: publisher_member_function.py  subscriber_member_function.py
PA1/src/py_srvcli/: package.xml  setup.py
PA1/src/py_srvcli/py_srvcli/: client_member_function.py  service_member_function.py
PA1/src/tutorial_interfaces/: CMakeLists.txt  package.xml
PA1/src/tutorial_interfaces/scripts/: pubu.py
